zinc/parser/zincParser.py
# Generated from zinc.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class zincParser ( Parser ):

    grammarFileName = "zinc.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'import'", "'as'", "'use'", "'struct'", 
                     "'const'", "'fn'", "'async'", "'await'", "'if'", "'else'", 
                     "'for'", "'in'", "'while'", "'loop'", "'match'", "'return'", 
                     "'break'", "'continue'", "'true'", "'false'", "'nil'", 
                     "'and'", "'or'", "'not'", "'self'", "'select'", "'case'", 
                     "'default'", "'spawn'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", "'<<-'", 
                     "'='", "'=='", "'!='", "'<-'", "'<'", "'<='", "'>'", 
                     "'>='", "'&&'", "'||'", "'!'", "'..'", "'..='", "'=>'", 
                     "'->'", "'::'", "'.'", "','", "':'", "';'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "'|'", "'_'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "USE", "STRUCT", 
                      "CONST", "FN", "ASYNC", "AWAIT", "IF", "ELSE", "FOR", 
                      "IN", "WHILE", "LOOP", "MATCH", "RETURN", "BREAK", 
                      "CONTINUE", "TRUE", "FALSE", "NIL", "AND", "OR", "NOT", 
                      "SELF", "SELECT", "CASE", "DEFAULT", "SPAWN", "INTEGER", 
                      "FLOAT", "STRING", "IDENTIFIER", "PLUS", "MINUS", 
                      "STAR", "SLASH", "PERCENT", "SUPER_ASSIGN", "EQ", 
                      "EQEQ", "NEQ", "LARROW", "LT", "LE", "GT", "GE", "AMPAMP", 
                      "PIPEPIPE", "BANG", "DOTDOT", "DOTDOTEQ", "ARROW", 
                      "RARROW", "COLONCOLON", "DOT", "COMMA", "COLON", "SEMI", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "PIPE", "UNDERSCORE", "WS", "LINE_COMMENT", 
                      "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_importStatement = 2
    RULE_importPath = 3
    RULE_importNameList = 4
    RULE_qualifiedName = 5
    RULE_constDeclaration = 6
    RULE_structDeclaration = 7
    RULE_structComposition = 8
    RULE_orthogonalComposition = 9
    RULE_mergeComposition = 10
    RULE_structBody = 11
    RULE_structMember = 12
    RULE_structField = 13
    RULE_functionDeclaration = 14
    RULE_asyncFunctionDeclaration = 15
    RULE_parameterList = 16
    RULE_parameter = 17
    RULE_type = 18
    RULE_typeList = 19
    RULE_tupleType = 20
    RULE_variableAssignment = 21
    RULE_superAssignment = 22
    RULE_assignmentTarget = 23
    RULE_tupleAssignmentTarget = 24
    RULE_expressionStatement = 25
    RULE_ifStatement = 26
    RULE_forStatement = 27
    RULE_forBinding = 28
    RULE_whileStatement = 29
    RULE_loopStatement = 30
    RULE_matchStatement = 31
    RULE_matchArm = 32
    RULE_pattern = 33
    RULE_rangePattern = 34
    RULE_fieldPattern = 35
    RULE_returnStatement = 36
    RULE_breakStatement = 37
    RULE_continueStatement = 38
    RULE_spawnStatement = 39
    RULE_selectStatement = 40
    RULE_channelSendStatement = 41
    RULE_block = 42
    RULE_expression = 43
    RULE_primaryExpression = 44
    RULE_memberAccess = 45
    RULE_indexAccess = 46
    RULE_literal = 47
    RULE_booleanLiteral = 48
    RULE_arrayLiteral = 49
    RULE_tupleLiteral = 50
    RULE_collectionLiteral = 51
    RULE_anonymousStructType = 52
    RULE_anonymousStructFieldType = 53
    RULE_anonymousStructLiteral = 54
    RULE_dictEntry = 55
    RULE_structInstantiation = 56
    RULE_fieldInit = 57
    RULE_argumentList = 58
    RULE_selectCase = 59
    RULE_selectReceiveBinding = 60
    RULE_lambdaExpression = 61

    ruleNames =  [ "program", "statement", "importStatement", "importPath", 
                   "importNameList", "qualifiedName", "constDeclaration", 
                   "structDeclaration", "structComposition", "orthogonalComposition", 
                   "mergeComposition", "structBody", "structMember", "structField", 
                   "functionDeclaration", "asyncFunctionDeclaration", "parameterList", 
                   "parameter", "type", "typeList", "tupleType", "variableAssignment", 
                   "superAssignment", "assignmentTarget", "tupleAssignmentTarget", 
                   "expressionStatement", "ifStatement", "forStatement", 
                   "forBinding", "whileStatement", "loopStatement", "matchStatement", 
                   "matchArm", "pattern", "rangePattern", "fieldPattern", 
                   "returnStatement", "breakStatement", "continueStatement", 
                   "spawnStatement", "selectStatement", "channelSendStatement", 
                   "block", "expression", "primaryExpression", "memberAccess", 
                   "indexAccess", "literal", "booleanLiteral", "arrayLiteral", 
                   "tupleLiteral", "collectionLiteral", "anonymousStructType", 
                   "anonymousStructFieldType", "anonymousStructLiteral", 
                   "dictEntry", "structInstantiation", "fieldInit", "argumentList", 
                   "selectCase", "selectReceiveBinding", "lambdaExpression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    USE=3
    STRUCT=4
    CONST=5
    FN=6
    ASYNC=7
    AWAIT=8
    IF=9
    ELSE=10
    FOR=11
    IN=12
    WHILE=13
    LOOP=14
    MATCH=15
    RETURN=16
    BREAK=17
    CONTINUE=18
    TRUE=19
    FALSE=20
    NIL=21
    AND=22
    OR=23
    NOT=24
    SELF=25
    SELECT=26
    CASE=27
    DEFAULT=28
    SPAWN=29
    INTEGER=30
    FLOAT=31
    STRING=32
    IDENTIFIER=33
    PLUS=34
    MINUS=35
    STAR=36
    SLASH=37
    PERCENT=38
    SUPER_ASSIGN=39
    EQ=40
    EQEQ=41
    NEQ=42
    LARROW=43
    LT=44
    LE=45
    GT=46
    GE=47
    AMPAMP=48
    PIPEPIPE=49
    BANG=50
    DOTDOT=51
    DOTDOTEQ=52
    ARROW=53
    RARROW=54
    COLONCOLON=55
    DOT=56
    COMMA=57
    COLON=58
    SEMI=59
    LPAREN=60
    RPAREN=61
    LBRACE=62
    RBRACE=63
    LBRACK=64
    RBRACK=65
    PIPE=66
    UNDERSCORE=67
    WS=68
    LINE_COMMENT=69
    BLOCK_COMMENT=70

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(zincParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(zincParser.StatementContext)
            else:
                return self.getTypedRuleContext(zincParser.StatementContext,i)


        def getRuleIndex(self):
            return zincParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = zincParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 1)) & ~0x3f) == 0 and ((1 << (_la - 1)) & -6340500901775542791) != 0):
                self.state = 124
                self.statement()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(zincParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importStatement(self):
            return self.getTypedRuleContext(zincParser.ImportStatementContext,0)


        def constDeclaration(self):
            return self.getTypedRuleContext(zincParser.ConstDeclarationContext,0)


        def structDeclaration(self):
            return self.getTypedRuleContext(zincParser.StructDeclarationContext,0)


        def functionDeclaration(self):
            return self.getTypedRuleContext(zincParser.FunctionDeclarationContext,0)


        def asyncFunctionDeclaration(self):
            return self.getTypedRuleContext(zincParser.AsyncFunctionDeclarationContext,0)


        def superAssignment(self):
            return self.getTypedRuleContext(zincParser.SuperAssignmentContext,0)


        def variableAssignment(self):
            return self.getTypedRuleContext(zincParser.VariableAssignmentContext,0)


        def channelSendStatement(self):
            return self.getTypedRuleContext(zincParser.ChannelSendStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(zincParser.ExpressionStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(zincParser.IfStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(zincParser.ForStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(zincParser.WhileStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(zincParser.LoopStatementContext,0)


        def matchStatement(self):
            return self.getTypedRuleContext(zincParser.MatchStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(zincParser.ReturnStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(zincParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(zincParser.ContinueStatementContext,0)


        def spawnStatement(self):
            return self.getTypedRuleContext(zincParser.SpawnStatementContext,0)


        def selectStatement(self):
            return self.getTypedRuleContext(zincParser.SelectStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(zincParser.BlockContext,0)


        def getRuleIndex(self):
            return zincParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = zincParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.importStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.constDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 134
                self.structDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 135
                self.functionDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 136
                self.asyncFunctionDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 137
                self.superAssignment()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 138
                self.variableAssignment()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 139
                self.channelSendStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 140
                self.expressionStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 141
                self.ifStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 142
                self.forStatement()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 143
                self.whileStatement()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 144
                self.loopStatement()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 145
                self.matchStatement()
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 146
                self.returnStatement()
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 147
                self.breakStatement()
                pass

            elif la_ == 17:
                self.enterOuterAlt(localctx, 17)
                self.state = 148
                self.continueStatement()
                pass

            elif la_ == 18:
                self.enterOuterAlt(localctx, 18)
                self.state = 149
                self.spawnStatement()
                pass

            elif la_ == 19:
                self.enterOuterAlt(localctx, 19)
                self.state = 150
                self.selectStatement()
                pass

            elif la_ == 20:
                self.enterOuterAlt(localctx, 20)
                self.state = 151
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def importPath(self):
            return self.getTypedRuleContext(zincParser.ImportPathContext,0)


        def IDENTIFIER(self):
            return self.getToken(zincParser.IDENTIFIER, 0)

        def LBRACK(self):
            return self.getToken(zincParser.LBRACK, 0)

        def importNameList(self):
            return self.getTypedRuleContext(zincParser.ImportNameListContext,0)


        def RBRACK(self):
            return self.getToken(zincParser.RBRACK, 0)

        def getRuleIndex(self):
            return zincParser.RULE_importStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStatement" ):
                listener.enterImportStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStatement" ):
                listener.exitImportStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStatement" ):
                return visitor.visitImportStatement(self)
            else:
                return visitor.visitChildren(self)




    def importStatement(self):

        localctx = zincParser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_importStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(zincParser.T__0)
            self.state = 155
            self.importPath()
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 156
                self.match(zincParser.T__1)
                self.state = 157
                self.match(zincParser.IDENTIFIER)

            elif la_ == 2:
                self.state = 158
                self.match(zincParser.LBRACK)
                self.state = 159
                self.importNameList()
                self.state = 160
                self.match(zincParser.RBRACK)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportPathContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(zincParser.IDENTIFIER)
            else:
                return self.getToken(zincParser.IDENTIFIER, i)

        def SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(zincParser.SLASH)
            else:
                return self.getToken(zincParser.SLASH, i)

        def getRuleIndex(self):
            return zincParser.RULE_importPath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportPath" ):
                listener.enterImportPath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportPath" ):
                listener.exitImportPath(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportPath" ):
                return visitor.visitImportPath(self)
            else:
                return visitor.visitChildren(self)




    def importPath(self):

        localctx = zincParser.ImportPathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_importPath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(zincParser.IDENTIFIER)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 165
                self.match(zincParser.SLASH)
                self.state = 166
                self.match(zincParser.IDENTIFIER)
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportNameListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(zincParser.IDENTIFIER)
            else:
                return self.getToken(zincParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(zincParser.COMMA)
            else:
                return self.getToken(zincParser.COMMA, i)

        def getRuleIndex(self):
            return zincParser.RULE_importNameList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportNameList" ):
                listener.enterImportNameList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportNameList" ):
                listener.exitImportNameList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportNameList" ):
                return visitor.visitImportNameList(self)
            else:
                return visitor.visitChildren(self)




    def importNameList(self):

        localctx = zincParser.ImportNameListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_importNameList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(zincParser.IDENTIFIER)
            self.state = 177
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 173
                    self.match(zincParser.COMMA)
                    self.state = 174
                    self.match(zincParser.IDENTIFIER) 
                self.state = 179
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==57:
                self.state = 180
                self.match(zincParser.COMMA)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QualifiedNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(zincParser.IDENTIFIER)
            else:
                return self.getToken(zincParser.IDENTIFIER, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(zincParser.DOT)
            else:
                return self.getToken(zincParser.DOT, i)

        def getRuleIndex(self):
            return zincParser.RULE_qualifiedName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQualifiedName" ):
                listener.enterQualifiedName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQualifiedName" ):
                listener.exitQualifiedName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQualifiedName" ):
                return visitor.visitQualifiedName(self)
            else:
                return visitor.visitChildren(self)




    def qualifiedName(self):

        localctx = zincParser.QualifiedNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_qualifiedName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(zincParser.IDENTIFIER)
            self.state = 188
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==56:
                self.state = 184
                self.match(zincParser.DOT)
                self.state = 185
                self.match(zincParser.IDENTIFIER)
                self.state = 190
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(zincParser.CONST, 0)

        def IDENTIFIER(self):
            return self.getToken(zincParser.IDENTIFIER, 0)

        def EQ(self):
            return self.getToken(zincParser.EQ, 0)

        def expression(self):
            return self.getTypedRuleContext(zincParser.ExpressionContext,0)


        def getRuleIndex(self):
            return zincParser.RULE_constDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstDeclaration" ):
                listener.enterConstDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstDeclaration" ):
                listener.exitConstDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstDeclaration" ):
                return visitor.visitConstDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def constDeclaration(self):

        localctx = zincParser.ConstDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_constDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(zincParser.CONST)
            self.state = 192
            self.match(zincParser.IDENTIFIER)
            self.state = 193
            self.match(zincParser.EQ)
            self.state = 194
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'
